# ui

./: .gitignore  =5.27.0  ARCHITECTURE.md  README.md  api_server_win_mock.py  build_and_launch_all.ps1  build_and_launch_all.sh  demo_spatio_temporal_sync.py  launch_notes.txt  pytest.py  requirements-clinical.txt  requirements-win-dev.txt  requirements.txt  run.py  sitecustomize.py  test_adaptive_timer.py  test_comprehensive_interpolation.py  test_exception_handler.py  test_pose_interpolation.py  test_protobuf_efficiency.py
cpp_robot_core/: CMakeLists.txt
cpp_robot_core/apps/: robot_core_cli_legacy.cpp  robot_core_main.cpp
cpp_robot_core/include/: impedance_control_manager.hpp  ipc_messages.hpp
cpp_robot_core/include/robot_core/: command_server.h  contact_observer.h  core_runtime.h  force_control_config.h  nrt_motion_service.h  protobuf_protocol.h  recording_service.h  recovery_manager.h  rt_motion_service.h  runtime_types.h  safety_service.h  sdk_robot_facade.h  telemetry_publisher.h  trajectory_compiler.h
cpp_robot_core/proto/: ipc_messages.proto
cpp_robot_core/src/: command_server.cpp  core_runtime.cpp  impedance_scan_example.cpp  json_utils.h  main_ubuntu_rt.cpp  nrt_motion_service.cpp  recording_service.cpp  recovery_manager.cpp  rt_motion_service.cpp  safety_service.cpp  scan_supervisor.cpp  sdk_robot_facade.cpp  telemetry_publisher.cpp  test_force_control.cpp  test_protocol_bridge.cpp  test_recovery_manager.cpp
gui-main/: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  FINAL_AUDIT.md  FINAL_COMPLIANCE_MATRIX.md  FINAL_REVIEW_AUDIT.md  IMPLEMENTATION_SUMMARY_round9.md  README.md  REVALIDATION_NOTE.md  SECOND_ROUND_AUDIT.md  TEST_STRATEGY.md  pyproject.toml  pytest.ini  requirements.txt  run.py
gui-main/.github/: CODEOWNERS
gui-main/.github/workflows/: ci.yml  mainline.yml
gui-main/archive/docs_history/: CONTROL_PLANE_REWRITE_WAVE_B.md  CONTROL_PLANE_REWRITE_WAVE_D.md  CONTROL_PLANE_REWRITE_WAVE_E.md  HEADLESS_API_V1.md  STRONG_CONVERGENCE_FRAMEWORK.md  XCORE_SDK_ALIGNMENT_PLAN.md  rewrite_v5_summary.md  vendor_sdk_rewrite_summary.md
gui-main/archive/legacy/: robot_core_main_legacy.cpp
gui-main/configs/: README.md  calibration.yaml  contact.yaml  default.yaml  demo.yaml  force_control.json  quality.yaml
gui-main/configs/base/: export.yaml  (+2 more)
gui-main/cpp_robot_core/: CMakeLists.txt
gui-main/docs/: BOUNDARY_RULES.md  CANONICAL_MODULE_REGISTRY.md  EVIDENCE_SCHEMA_V2.md  FREEZE_POLICY.md  HIL_GATE.md  INTERFACE_MATRIX.md  MODEL_AUTHORITY_SPEC.md  NRT_EXECUTOR_SPEC.md  OPERATION_FLOW.md  P1_ACCEPTANCE_CHECKLIST.md  P2_ACCEPTANCE_CHECKLIST.md  P2_ACCEPTANCE_REVIEW.md  P3_RUNTIME_REFINEMENT.md  PROFILE_MATRIX.md  RELEASE_PROFILE_MATRIX.md  REPLAY_SCHEMA_V2.md  REPOSITORY_GATES.md  ROBOT_FAMILY_MATRIX.md  RT_KERNEL_SPEC.md  SAFETY_RECOVERY_POLICY.md  SDK_USAGE_POLICY.md  architecture.md  benchmark_suite.md  bringup_and_fault_injection.md  capability_matrix.md  error_taxonomy.md  exception_catch_matrix.md  export_formats.md  importer_fidelity.md  kinematics_conventions.md  module_status.md  packaging.md  planning_scene.md  plugin_development.md  quality_gates.md  rewrite_v3_summary.md  rewrite_v4_summary.md  roadmap.md  runtime_contract_expansion.md  schema_versions.md  (+6 more)
gui-main/exports/: bench_test.csv  bench_test.json  metrics_test.json
gui-main/robot_sim/: __init__.py
gui-main/runtime/: bootstrap_env.py
gui-main/schemas/: alarm_event.schema.json  artifact_registry.schema.json  device_readiness.schema.json  diagnostics_pack.schema.json  frame_sync_index.schema.json  manifest.schema.json  patient_registration.schema.json  qa_pack.schema.json  quality_timeline.schema.json  replay_index.schema.json  scan_protocol.schema.json  session_compare.schema.json  session_report.schema.json  session_trends.schema.json  xmate_profile.schema.json
gui-main/scripts/: bootstrap_hil_runtime.sh  bootstrap_prod_runtime.sh  bootstrap_real_runtime.sh  build_cpp_targets.py  check_canonical_imports.py  check_contract_alignment.sh  check_cpp_prereqs.sh  check_p2_acceptance.py  check_protocol_sync.py  check_repo_hygiene.sh  check_repository_gates.py  deployment_smoke_test.py  doctor_runtime.py  evaluate_release_gate.sh  export_openapi.py  export_report.sh  final_acceptance_audit.sh  generate_dev_tls_cert.sh  generate_p2_acceptance_artifacts.py  generate_release_evidence.sh  mock_robot_core_server.py  package_release.py  regenerate_quality_contracts.py  run_pytest_mainline.py  run_tests.py  setup_ubuntu_rt.sh  start_demo.sh  start_headless.sh  start_hil.sh  start_prod.sh  start_real.sh  strict_convergence_audit.py  test_python.sh  verify_mainline.sh  verify_quality_contracts.py
gui-main/spine_ultrasound_ui/: __init__.py  api_server.py  app.py  bootstrap.py  compat.py  main_window.py
gui-main/tests/: bootstrap_env.py  conftest.py  pyside6_stub.py  runtime_compat.py  test_algorithm_plane_and_readiness.py  test_api_contract.py  test_api_security.py  test_app_controller.py  test_backend_error_mapping.py  test_backend_link_and_api_bridge.py  test_bridge_observability.py  test_clinical_config_and_governance.py  test_contract_consistency_and_release_evidence.py  test_control_ownership.py  test_control_plane.py  test_cpp_target_scoped_contracts.py  test_event_bus_and_session_intelligence.py  test_event_envelope_and_resume.py  test_experiment_manager.py  test_force_control_config.py  test_force_sensor_provider.py  test_headless_runtime.py  test_imaging_pipeline.py  test_ipc_protocol.py  test_main_window_status_presenter.py  test_mainline_mock_e2e.py  test_mainline_runtime_doctor.py  test_mainline_script_contracts.py  test_mainline_task_tree_contracts.py  test_memory_pool.py  test_mock_backend.py  test_p0_cpp_runtime_truth.py  test_p2_acceptance_review.py  test_p2_repository_gates.py  test_p2_stage_manifests.py  test_p3_runtime_refinements.py  test_page_layout_compaction.py  test_plan_service.py  test_profile_policy.py  test_protocol_sync_contract_metadata.py  (+31 more)
gui-main/ui_frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+1215 files in other folders)
